--- a/Index.html
+++ b/Index.html
@@ -1,1 +1,46 @@
 
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="UTF-8">
+    <title>Wallpaper Download Site</title>
+    <link rel="stylesheet" href="style.css">
+  </head>
+  <body>
+    <header>
+      <nav>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="nature.html">Nature</a></li>
+          <li><a href="landscapes.html">Landscapes</a></li>
+          <li><a href="animals.html">Animals</a></li>
+          <li><a href="abstract.html">Abstract</a></li>
+          <li><a href="technology.html">Technology</a></li>
+          <li><a href="cars.html">Cars and Vehicles</a></li>
+          <li><a href="sports.html">Sports</a></li>
+          <li><a href="space.html">Space and Universe</a></li>
+          <li><a href="fantasy.html">Fantasy</a></li>
+          <li><a href="architecture.html">Architecture</a></li>
+          <li><a href="food.html">Food and Drink</a></li>
+          <li><a href="travel.html">Travel and Adventure</a></li>
+          <li><a href="music.html">Music</a></li>
+          <li><a href="movies.html">Movies and TV Shows</a></li>
+          <li><a href="art.html">Art and Illustrations</a></li>
+          <li><a href="holidays.html">Holidays and Events</a></li>
+          <li><a href="minimalistic.html">Minimalistic</a></li>
+          <li><a href="patterns.html">Patterns and Textures</a></li>
+          <li><a href="anime.html">Anime and Manga</a></li>
+          <li><a href="comics.html">Comics and Cartoons</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="contact.html">Contact Us</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <!-- Content goes here -->
+    </main>
+    <footer>
+      <p>Wallpaper Download Site &copy; 2023</p>
+    </footer>
+  </body>
+</html>
