--- a/Index.html
+++ b/Index.html
@@ -40,7 +40,7 @@
       <!-- Content goes here -->
     </main>
     <footer>
-      <p>Wallpaper Download Site &copy; 2023</p>
+      <p> Clone Walpapers &copy; 2023</p>
     </footer>
   </body>
 </html>
