--- a/Index.html
+++ b/Index.html
@@ -42,6 +42,6 @@
     <footer>
       <p> Clone Walpapers &copy; 2023</p>
     </footer>
-    <script></scripts>
+    <script src"scripts.js"></scripts>
   </body>
 </html>
