--- a/Index.html
+++ b/Index.html
@@ -38,7 +38,7 @@
     </header>
     <main>
       <!-- Content goes here -->
-      h1
+      <h1>CLONE
     </main>
     <footer>
       <p> Clone Walpapers &copy; 2023</p>
