--- a/Index.html
+++ b/Index.html
@@ -1,4 +1,4 @@
-
+8
 <!DOCTYPE html>
 <html>
   <head>
@@ -38,7 +38,7 @@
     </header>
     <main>
       <!-- Content goes here -->
-      <h1>CLONE WALLPAPERS 
+      <h1>CLONE <span>WALLPAPERS
     </main>
     <footer>
       <p> Clone Walpapers &copy; 2023</p>
