--- a/Index.html
+++ b/Index.html
@@ -39,7 +39,7 @@
     <main>
       <!-- Content goes here -->
       <h1>CLONE <span>WALLPAPERS</span></h1>
-      <p>Wallpapers download on single click </p>
+      <p>Wallpapers download on single click fast and free </p>
     </main>
     <footer>
       <p> Clone Walpapers &copy; 2023</p>
