--- a/Index.html
+++ b/Index.html
@@ -38,6 +38,7 @@
     </header>
     <main>
       <!-- Content goes here -->
+      <img 
       <h1>CLONE <span>WALLPAPERS</span></h1>
       <p>Wallpapers download on single click fast and free </p>
     </main>
