--- a/Index.html
+++ b/Index.html
@@ -38,7 +38,7 @@
     </header>
     <main>
       <!-- Content goes here -->
-      <img src
+      <img src="" alt
       <h1>CLONE <span>WALLPAPERS</span></h1>
       <p>Wallpapers download on single click fast and free </p>
     </main>
