--- a/Index.html
+++ b/Index.html
@@ -3,7 +3,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Wallpaper Download Site</title>
+    <title>Wallpaper Download </title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
