--- a/Index.html
+++ b/Index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Wallpaper Download </title>
     <link rel="stylesheet" href="style.css">
-  </head>.....
+  </head>....
   <body>
     <header>
       <nav>
